--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "start": "node node_modules/react-native/local-cli/cli.js start",
+    "flow": "flow",
     "test": "jest"
   },
   "dependencies": {
@@ -13,6 +14,7 @@
   "devDependencies": {
     "babel-jest": "22.4.3",
     "babel-preset-react-native": "4.0.0",
+    "flow-bin": "^0.65.0",
     "jest": "22.4.3",
     "react-test-renderer": "^16.3.0-alpha.1"
   },
